--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-div {
+[class*=book-card] {
     background-color: lightgray;
     border: 1px solid black;
     width: max-content;
 }
+
+/* .add-button {
+    background-color: rgb(246, 196, 98);
+    color: black;
+    border: 2px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+    box-shadow: -1px -1px 2px inset;
+} */
