--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
+body {
+    margin: 0;
+}
 [class*=book-card] {
     background-color: lightgray;
     border: 1px solid black;
-    width: max-content;
+    /* width: max-content; */
+}
+
+.content-container {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
+}
+
+[class*="read"][value="false"] {
+    background-color: darkblue;
+}
+[class*="read"][value="true"] {
+    background-color: green;
 }
 
 /* .add-button {
