--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
     margin: 0;
 }
-[class*=book-card] {
-    background-color: lightgray;
-    border: 1px solid black;
-    /* width: max-content; */
+
+#add-book-form {
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .content-container {
@@ -12,6 +14,13 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 1rem;
+    
+}
+
+[class*=book-card] {
+    background-color: lightgray;
+    border: 1px solid black;
+    /* min-width: max-content; */
 }
 
 .read[value="false"] {
